--- a/style.css
+++ b/style.css
@@ -32,6 +32,11 @@ text-align: center;
 height: 95px;
 }
 
+#logo{
+padding: 0px;
+margin-left: 10px;
+}
+
 .nav li{
 display: inline-block;
 font-size: 16px;
@@ -117,7 +122,6 @@ justify-content: center;
 }
 
 
-
 .btn{
 background-color: #CC006E;
 border: #CC006E;
@@ -130,6 +134,20 @@ background-color:lightpink;
 border: #CC006E;
 color: #CC006E;
 }
+
+#alt-btn-style{
+border: 2px #CC006E;
+background-color:#11349B;
+color: white;
+font-size: 16px;
+cursor: pointer;
+}
+
+#alt-btn-style:hover{
+background-color: #8195CD;
+color: #11349B;
+}
+
 
 .footer{
 background-color:#3C64B1;
